boreal/tests/assets/invalid_files/parsing/string_modifier_incompatible.yar
rule a {
    strings:
        $a = "a" xor private nocase
    condition:
        $a
}
